# fastapi-news-service

./: .env  pyproject.toml  readme.md  test.db  test.py
app/: config.py  crud.py  main.py  models.py  schemas.py
app/routers/: news.py
app/services/: news_fetcher.py
