[tool.poetry]
name = "news-test"
version = "0.1.0"
description = ""
authors = ["AsadKhalil <asad.muhammad@tkxel.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.3"
httpx = "^0.27.2"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.36"
uvicorn = "^0.32.0"
apscheduler = "^3.10.4"
pydantic-settings = "^2.6.0"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
